--- a/src/create-basic-tab.html
+++ b/src/create-basic-tab.html
@@ -7,8 +7,8 @@
         <style>
             :host {
                 display: block;
-                height: calc(100% - 16px);
-                padding: 8px;
+                height: calc(100% - 32px);
+                padding: 16px 0;
                 @apply(--layout-vertical);
             }
         </style>
