hotfix - Remoção de Dependencias

--- a/index.html
+++ b/index.html
@@ -41,24 +41,25 @@
 
             // load webcomponents polyfills
             (function() {
+                var e = null;
                 if ('registerElement' in document
                     && 'import' in document.createElement('link')
                     && 'content' in document.createElement('template')) {
                     // browser has web components
                 } else {
                     // polyfill web components
-                    var e = document.createElement('script');
+                    e = document.createElement('script');
                     e.src = '/bower_components/webcomponentsjs/webcomponents-lite.min.js';
                     document.head.appendChild(e);
                 }
-                var e = document.createElement('script');
+                e = document.createElement('script');
                 e.src = '/bower_components/linqjs/linq.min.js';
                 document.head.appendChild(e);
             })();
             // load pre-caching service worker
             if ('serviceWorker' in navigator) {
                 window.addEventListener('load', function() {
-                    navigator.serviceWorker.register('/service-worker.js');
+                    //navigator.serviceWorker.register('/service-worker.js');
                 });
             }
         </script>
