--- a/src/snd-sheet-list.html
+++ b/src/snd-sheet-list.html
@@ -35,7 +35,7 @@
         <template is="dom-repeat"
                   items="{{ sheetList.list }}">
 
-            <list-sheet-card index="{{ index }}"
+            <list-sheet-card index="[[ index ]]"
                              name="{{ item.name }}"
                              level="{{ item.level }}"
                              job="{{ item.job }}"
