--- a/src/create-status-tab.html
+++ b/src/create-status-tab.html
@@ -25,7 +25,7 @@
         <template is="dom-repeat"
                   items="{{ statusList }}">
 
-            <create-status-card index="{{ index }}"
+            <create-status-card index="[[ index ]]"
                                 name="{{ item.name }}"
                                 base-value="{{ item.baseValue }}"
                                 level-modifier="{{ item.levelModifier }}"
