--- a/src/snd-sheet-create.html
+++ b/src/snd-sheet-create.html
@@ -148,13 +148,22 @@
                 }
             },
 
+            _returnStatusModifier: function (statusValue, minimumModifierValue) {
+                if (statusValue >= minimumModifier) {
+                    return parseInt((statusValue - minimumModifierValue) / 2);
+                } else {
+                    return parseInt((statusValue - minimumModifierValue) / 2 - 0.5);
+                }
+            },
+
             sheetBaseContructor: function () {
                 function SheetBase () {
                     this.name = "";
                     this.job = "";
                     this.race = "";
-                    this.level = "1";
-                    this.system = "",
+                    this.level = 1;
+                    this.system = "";
+                    this.minimumModifierValue = 10;
                     this.statusList = [
                         new Status()
                     ];
@@ -169,6 +178,9 @@
                     ];
                     this.persistBonusList = [];
                     this.volatileBonusList = [];
+                    this.notesList = [
+                        new Note(null, null);
+                    ];
                 }
 
                 function Dependency () {
@@ -181,7 +193,6 @@
                     this.name = "Strength";
                     this.value = 0;
                     this.baseValue = 0;
-                    this.minimumModifierValue = 10;
                     this.levelModifier = 0;
                     this.persistBonus = 0;
                     this.volatileBonus = 0;
@@ -200,6 +211,11 @@
                     this.dependencyList = [
                         new Dependency()
                     ]
+                }
+
+                function Note (title, text) {
+                    this.title = title;
+                    this.text = text;
                 }
 
                 return new SheetBase();
