--- a/src/create-status-card.html
+++ b/src/create-status-card.html
@@ -110,6 +110,10 @@
             },
             skillsList: {
                 type: Array
+            },
+            useMinimumModifier: {
+                type: Boolean,
+                value: false
             }
         },
 
