Penas Alteracoes no Checkbox de Status

--- a/src/snd-newsheet-data.html
+++ b/src/snd-newsheet-data.html
@@ -46,7 +46,7 @@
                 this.persistBonusList = [];
                 this.volatileBonusList = [];
                 this.notesList = [
-                    new Note(null, null);
+                    new Note(null, null)
                 ];
             }
 
