--- a/src/create-status-tab.html
+++ b/src/create-status-tab.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/paper-card/paper-card.html">
+<link rel="import" href="../bower_components/paper-checkbox/paper-checkbox.html">
 
 <link rel="import" href="create-status-card.html">
 
@@ -22,18 +23,29 @@
                 right: 16px;
             }
 
+            paper-card {
+                margin-bottom: 16px;
+            }
+
+            paper-checkbox {
+                align-self: flex-end;
+                margin: 0 16px 16px 0;
+            }
+
             .card-content {
                 @apply(--layout-horizontal);
+                @apply(--layout-center);
             }
         </style>
 
         <paper-card>
             <div class="card-content">
                 <paper-checkbox checked="{{ useMinimumModifier }}"></paper-checkbox>
-                <paper-input-container disabled="[[ useMinimumModifier ]]">
+                <paper-input-container>
                     <label>Status Minimum Modifier Value</label>
                     <input is="iron-input"
-                        bind-value="{{ minimumModifierValue }}">
+                        bind-value="{{ minimumModifierValue }}"
+                        disabled="[[ useMinimumModifier ]]">
                 </paper-input-container>
             </div>
         </paper-card>
@@ -84,7 +96,7 @@
             },
             useMinimumModifier: {
                 type: Boolean,
-                value: true
+                value: false
             }
         },
 
