--- a/src/snd-sheet-create.html
+++ b/src/snd-sheet-create.html
@@ -179,7 +179,7 @@
                     this.persistBonusList = [];
                     this.volatileBonusList = [];
                     this.notesList = [
-                        new Note(null, null);
+                        new Note(null, null)
                     ];
                 }
 
